--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Art Practice</title>
+
+    {/* Open Graph tags (OG) */}
+    <meta property="og:url" content="https://krlrmlv.github.io/art-practice-react/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="React Art Practice" />
+    <meta property="og:description" content="React Art Practice project description" />
+
+    {/* OG image tags */}
+    <meta property="og:image" content="https://krlrmlv.github.io/art-practice-react/logo192.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="192" />
+    <meta property="og:image:alt" content="Image of √ site" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
