--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,15 @@
     -->
     <title>React Art Practice</title>
 
-    {/* Open Graph tags (OG) */}
     <meta property="og:url" content="https://krlrmlv.github.io/art-practice-react/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="React Art Practice" />
     <meta property="og:description" content="React Art Practice project description" />
 
-    {/* OG image tags */}
     <meta property="og:image" content="https://krlrmlv.github.io/art-practice-react/logo192.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="192" />
-    <meta property="og:image:alt" content="Image of √ site" />
+    <meta property="og:image:alt" content="Image of React Art Practice site" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
