--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React Art Practice project description"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -35,6 +35,7 @@
     <meta property="og:image" content="https://krlrmlv.github.io/art-practice-react/logo192.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="192" />
+    <meta property="og:image:height" content="192" />
     <meta property="og:image:alt" content="Image of React Art Practice site" />
   </head>
   <body>
